fixed the footer alignment

--- a/Styles.css
+++ b/Styles.css
@@ -47,15 +47,18 @@ body {
     background-color: rgb(0,0,75);
     overflow: hidden;
     margin-top: 0px;
-    vertical-align: bottom;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
 }
 .topnavfooter a {
+    position: relative;
     float: left;
     color: #fff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-    font-size: 32px;
+    font-size: 10px;
 }
 .topnavfooter a.active {
     color: rgb(0,150,255);
